
(The above were included in the 3.6.1 patch release.)

Changed default temporary directory from /usr/tmp, which doesn't exist
on a lot of systems these days, to /tmp.

Eliminated many unused files and programs from the distribution, including
the following programs that were being built but no longer used:
	oki20	- printer driver for OkiMate 20 printer (B&W)
	oki20c	- printer driver for OkiMate 20 color printer
	pcwarp	- intended as more general substitute for macbetcal,
			but never quite worked
	ra_avs	- convert to & from AVS image format
	ra_bn	- convert to & from Barneyscann format
	ra_pr	- convert to & from 8-bit Sun rasterfile format
	ra_pr24	- convert to & from 24-bit Sun rasterfile format
	thf2rad	- convert GDS "things file" to Radiance scene format
If anyone is still wanting any of the above programs, let us know and we'll
reinstate it.

Fixed bug in pcond's acuity simulation for small view angles (less than
4 degrees horizontally or vertically).  Thanks to James Lee for figuring
this out.

Added script to convert to/from ICT's Poskanzer Float Map, which I don't
care to support officially due to its machine-dependent byte order.

Fixed bug that caused incorrect reporting of non-surface in set when
mixing meshes and instances.  (Thanks to Jack de Valpine for discovery.)

Fixed innacuracy in calculation of diffuse transmission in the presence
of pure specular (Fresnel reflection) using "trans" material.  Thanks
to Christoph Reinhart for pointing out the error.

Made internal change to tone-mapping library to use structure pointer
rather than stack, making code re-entrant and more up to modern standards.

Added -pd option to handle depth-of-field blur in rpict.  This requires
that the view directon (-vd option) include focal distance information,
which is now preserved by the various view file routines, and reported
by the vwright command.

Added DBLUR variable to ranimate and pmdblur script to handle simultaneous
motion and depth-of-field blurring.