@@ -1396,3 +1396,6 @@ by the vwright command.
 
 Added DBLUR variable to ranimate and pmdblur script to handle simultaneous
 motion and depth-of-field blurring.
+
+Added setting of focus distance in rvu ("focus" command) and rholo
+('f'/"frame" command).
